# Diplom_cppm_Ground

Diplom_cppm/: Diplom_cppm.sln
Diplom_cppm/Broomstick/: Broomstick.cpp  Broomstick.h  Broomstick.vcxproj
Diplom_cppm/Broomstick/Debug/: vc143.idb
Diplom_cppm/Broomstick/Debug/Broomstick.tlog/: Broomstick.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Diplom_cppm/Camel/: Camel.h  Camel.vcxproj
Diplom_cppm/Camel/Debug/: vc143.idb
Diplom_cppm/Camel/Debug/Camel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Camel.lastbuildstate
Diplom_cppm/Camel_Fast/: Camel_Fast.cpp  Camel_Fast.h  Camel_Fast.vcxproj
Diplom_cppm/Camel_Fast/Debug/: vc143.idb
Diplom_cppm/Camel_Fast/Debug/Camel_Fast.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Camel_Fast.lastbuildstate
Diplom_cppm/Diplom_cppm/: Boots.cpp  Boots.h  Broomstick.cpp  Broomstick.h  CMakeLists.txt  Camel.cpp  Camel.h  Camel_Fast.cpp  Camel_Fast.h  Diplom_cppm.cpp  Diplom_cppm.vcxproj  Eagle.cpp  Eagle.h  Kentavr.cpp  Kentavr.h  Plane.cpp  Plane.h  Request.cpp  Request.h  Source.cpp  Source.h  Transport.cpp  Transport.h
Diplom_cppm/Eagle/: Eagle.cpp  Eagle.h  Eagle.vcxproj
Diplom_cppm/Eagle/Debug/: vc143.idb
Diplom_cppm/Kentavr/: Kentavr.h  Kentavr.vcxproj
Diplom_cppm/Kentavr/Debug/: vc143.idb
Diplom_cppm/Plane/: Plane.cpp  Plane.h  Plane.vcxproj
Diplom_cppm/Plane/Debug/: vc143.idb
Diplom_cppm/Transport/: Transport.h  Transport.vcxproj
Diplom_cppm/Transport/Debug/: Transport.dll.recipe  Transport.vcxproj.FileListAbsolute.txt  vc143.idb
(+19 files in other folders)
